--- a/roles/import_image_and_run_aws_instance/tasks/main.yml
+++ b/roles/import_image_and_run_aws_instance/tasks/main.yml
@@ -19,15 +19,32 @@
         msg: The name to assign to the AWS EC2 instance must be defined as import_image_and_run_aws_instance_instance_name
       when: import_image_and_run_aws_instance_instance_name is undefined
 
+    - name: Fail when 'import_image_and_run_aws_instance_import_image_task_name' is undefined
+      ansible.builtin.fail:
+        msg: The name of the EC2 import image task must be defined as import_image_and_run_aws_instance_import_image_task_name
+      when: import_image_and_run_aws_instance_import_image_task_name is undefined
+
     - name: Get information about the S3 bucket
       community.aws.s3_bucket_info:
         name: "{{ import_image_and_run_aws_instance_bucket_name }}"
       register: import_image_and_run_aws_instance__bucket_info
 
-    - name: Fail when S3 bucket name does not exist
+    - name: Fail when S3 bucket does not exist
       ansible.builtin.fail:
-        msg: "The on prem VM {{ import_image_and_run_aws_instance_bucket_name }} does not exist."
+        msg: "The S3 bucket {{ import_image_and_run_aws_instance_bucket_name }} does not exist."
       when: import_image_and_run_aws_instance__bucket_info.buckets | length == 0
+
+    - name: Check if an instance with the specified name already exists
+      amazon.aws.ec2_instance_info:
+        filters:
+          "tag:Name": "{{ import_image_and_run_aws_instance_instance_name }}"
+          instance-state-name: [ "running", "pending", "shutting-down", "stopping", "stopped"]
+      register: import_image_and_run_aws_instance__ec2_instance_info
+
+    - name: Fail when an instance with the specified name already exists
+      ansible.builtin.fail:
+        msg: "An EC2 instance with name {{ import_image_and_run_aws_instance_instance_name }} already exists"
+      when: import_image_and_run_aws_instance__ec2_instance_info.instances | length == 1
 
     - name: Set 'import_image_and_run_aws_instance__s3_object_key' variable
       ansible.builtin.set_fact:
@@ -68,18 +85,6 @@
       ansible.builtin.set_fact:
         import_image_and_run_aws_instance__ami_id: "{{ import_image_and_run_aws_instance__import_image_info.import_image[0].image_id }}"
         import_image_and_run_aws_instance__snapshot_id: "{{ import_image_and_run_aws_instance__import_image_info.import_image[0].snapshot_details[0].snapshot_id }}"
-
-    - name: Check if an instance with the specified name alrerady exists
-      amazon.aws.ec2_instance_info:
-        filters:
-          "tag:Name": "{{ import_image_and_run_aws_instance_instance_name }}"
-          instance-state-name: [ "running", "pending", "shutting-down", "stopping", "stopped"]
-      register: import_image_and_run_aws_instance__ec2_instance_info
-
-    - name: Fail when an instance with the specified name already exists
-      ansible.builtin.fail:
-        msg: "An EC2 instance with name {{ import_image_and_run_aws_instance_instance_name }} already exists"
-      when: import_image_and_run_aws_instance__ec2_instance_info.instances | length == 1
 
     - name: Start EC2 instance
       amazon.aws.ec2_instance:
