--- a/.config/ansible-lint.yml
+++ b/.config/ansible-lint.yml
@@ -6,3 +6,5 @@ skip_list:
   - meta-no-info  # meta/main.yml should contain relevant info.
   - latest[git]  # Result of the command may vary on subsequent runs.
   - no-handler  # Tasks that run when changed should likely be handlers.
+exclude_paths:
+  - roles/aws_setup_credentials/  # Skip defaults/main.yml file
