--- a/roles/create_rds_global_cluster/tasks/create.yml
+++ b/roles/create_rds_global_cluster/tasks/create.yml
@@ -14,20 +14,20 @@
 
     - name: Create a primary cluster for global database "{{ create_rds_global_cluster_global_cluster_name }}" in "{{ create_rds_global_cluster_primary_cluster_region }}"
       amazon.aws.rds_cluster:
-        db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name | default('{{ create_rds_global_cluster_global_cluster_name }}') }}" # aka cluster_name
+        db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name | default('{{ create_rds_global_cluster_global_cluster_name }}') }}"
         region: "{{ create_rds_global_cluster_primary_cluster_region }}"
         engine: "{{ create_rds_global_cluster_engine | default('aurora-postgresql')}}"
         engine_version: "{{ create_rds_global_cluster_engine_version }}"
         master_username: "{{ create_rds_global_cluster_master_username }}"
         master_user_password: "{{ create_rds_global_cluster_master_user_password }}"
         db_subnet_group_name: "{{ create_rds_global_cluster_db_subnet_group_name | default(omit) }}"
-        global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}" # what global db cluster should be associated to
+        global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
         database_name: "{{ create_rds_global_cluster_primary_cluster_db_name | default(omit) }}"
         vpc_security_group_ids: "{{ create_rds_global_cluster_primary_cluster_vpc_security_group_ids| default(omit) }}"
 
     - name: Create an instance connected to primary cluster
       amazon.aws.rds_instance:
-        db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name }}" # what cluster instance should be in
+        db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name }}"
         db_instance_identifier: "{{ create_rds_global_cluster_primary_cluster_instance_name }}"
         region: "{{ create_rds_global_cluster_primary_cluster_region }}"
         engine: "{{ create_rds_global_cluster_engine | default('aurora-postgresql')}}"
@@ -35,18 +35,18 @@
 
     - name: Create a read replica cluster for global database "{{ create_rds_global_cluster_global_cluster_name }}" in "{{ create_rds_global_cluster_replica_cluster_region }}"
       amazon.aws.rds_cluster:
-        db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name | default('{{ create_rds_global_cluster_global_cluster_name }}') }}" # aka cluster_name
+        db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name | default('{{ create_rds_global_cluster_global_cluster_name }}') }}"
         region: "{{ create_rds_global_cluster_replica_cluster_region }}"
         engine: "{{ create_rds_global_cluster_engine | default('aurora-postgresql')}}"
         engine_version: "{{ create_rds_global_cluster_engine_version }}"
         db_subnet_group_name: "{{ create_rds_global_cluster_db_subnet_group_name | default(omit) }}"
-        global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}" # what global db cluster should be associated to
+        global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
         enable_global_write_forwarding: "{{ create_rds_global_cluster_replica_enable_global_write_forwarding | default(omit) }}"
         vpc_security_group_ids: "{{ create_rds_global_cluster_replica_cluster_vpc_security_group_ids| default(omit) }}"
 
     - name: Create an instance connected to secondary cluster
       amazon.aws.rds_instance:
-        db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name }}" # what cluster instance should be in
+        db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name }}"
         db_instance_identifier: "{{ create_rds_global_cluster_replica_cluster_instance_name }}"
         region: "{{ create_rds_global_cluster_replica_cluster_region }}"
         engine: "{{ create_rds_global_cluster_engine | default('aurora-postgresql')}}"
