--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -61,19 +61,19 @@ deploy_flask_app_rds_master_password: L#5cH2mgy_
 deploy_flask_app_rds_master_username: ansible
 
 # vars to create aurora db cluster
-test_instance_class: db.r5.large
+rds_instance_class: db.r5.large
 # Global cluster parameters ================================
-test_global_cluster_name: "{{ resource_prefix }}-global-cluster"
+rds_global_cluster_name: "{{ resource_prefix }}-global-cluster"
 
 # Primary cluster parameters ================================
-test_primary_cluster_name: "{{ resource_prefix }}-primary-cluster"
-test_primary_cluster_region: us-west-2
-test_primary_cluster_instance_name: "{{ resource_prefix }}-primary-instance"
+rds_primary_cluster_name: "{{ resource_prefix }}-primary-cluster"
+rds_primary_cluster_region: us-west-2
+rds_primary_cluster_instance_name: "{{ resource_prefix }}-primary-instance"
 
 # Replica cluster parameters ================================
-test_replica_cluster_name: "{{ resource_prefix }}-replica-cluster"
-test_replica_cluster_region: us-east-2
-test_replica_cluster_instance_name: "{{ resource_prefix }}-replica-instance"
+rds_replica_cluster_name: "{{ resource_prefix }}-replica-cluster"
+rds_replica_cluster_region: us-east-2
+rds_replica_cluster_instance_name: "{{ resource_prefix }}-replica-instance"
 
 # vars for route53 records
 route53_zone_name: "ansiblecloud.xyz"
